Revise agent type grammar slightly.
An untyped agent is now simply 'agent' instead of 'agent {}'. This is more in
line with how function types look.

--- a/src/language/core/Syntax/Tree/SyntaxTree.xml
+++ b/src/language/core/Syntax/Tree/SyntaxTree.xml
@@ -302,12 +302,16 @@
 
     <Type Name="AgentType" Base="Type">
         <Token Name="AgentKeyword" />
+        <Node Name="Protocol" Type="AgentTypeProtocol" Optional="true" />
+    </Type>
+
+    <Type Name="AgentTypeProtocol" Parent="AgentType">
         <Token Name="OpenBrace" />
         <Nodes Name="Message" Type="AgentTypeMessage" Separated="true" />
         <Token Name="CloseBrace" />
     </Type>
 
-    <Type Name="AgentTypeMessage" Parent="AgentType">
+    <Type Name="AgentTypeMessage" Parent="AgentTypeProtocol">
         <Token Name="Name" />
         <Node Name="ParameterList" Type="AgentTypeMessageParameterList" />
     </Type>
