Rename IdentifierExpressionSyntax.IdentifierToken -> NameToken.
This is now consistent with every other syntax node.

--- a/src/language/core/Syntax/Tree/SyntaxTree.xml
+++ b/src/language/core/Syntax/Tree/SyntaxTree.xml
@@ -695,7 +695,7 @@
     </Type>
 
     <Type Name="IdentifierExpression" Base="Expression">
-        <Token Name="Identifier" />
+        <Token Name="Name" />
     </Type>
 
     <Type Name="AssignmentExpression" Base="Expression">
