Rename TypeDeclarationSyntax.Type -> Body.

--- a/src/language/core/Syntax/Tree/SyntaxTree.xml
+++ b/src/language/core/Syntax/Tree/SyntaxTree.xml
@@ -73,7 +73,7 @@
         <Token Name="Name" />
         <Node Name="ParameterList" Type="TypeParameterList" Optional="true" />
         <Token Name="Equals" />
-        <Node Name="Type" Type="Type" />
+        <Node Name="Body" Type="Type" />
         <Token Name="Semicolon" />
     </Type>
 
