Replace the term 'normal' with 'regular' throughout in cases where the latter makes more sense.

--- a/src/language/core/Syntax/Tree/SyntaxTree.xml
+++ b/src/language/core/Syntax/Tree/SyntaxTree.xml
@@ -348,7 +348,7 @@
 
     <Type Name="ReturnType" Abstract="true" />
 
-    <Type Name="NormalReturnType" Base="ReturnType">
+    <Type Name="RegularReturnType" Base="ReturnType">
         <Node Name="Type" Type="Type" />
     </Type>
 
