Allow omitting the semicolon on certain expression statements.
This comes with the downside that these are now parsed as 'standalone'
expressions. You can't say `{ foo; } + bar` in a block now; instead, you have to
do `({ foo; } + bar)`. I think this is the right trade-off, though. Notably, Zig
and Rust both do this.

Closes #106.

--- a/src/language/core/PublicAPI.Unshipped.txt
+++ b/src/language/core/PublicAPI.Unshipped.txt
@@ -47,7 +47,7 @@ abstract Vezel.Celerity.Language.Syntax.Tree.ExpressionArmSyntax.Body.get -> Vez
 abstract Vezel.Celerity.Language.Syntax.Tree.PatternSyntax.Alias.get -> Vezel.Celerity.Language.Syntax.Tree.PatternAliasSyntax?
 abstract Vezel.Celerity.Language.Syntax.Tree.PostfixExpressionSyntax.Subject.get -> Vezel.Celerity.Language.Syntax.Tree.ExpressionSyntax!
 abstract Vezel.Celerity.Language.Syntax.Tree.StatementSyntax.Attributes.get -> Vezel.Celerity.Language.Syntax.Tree.SyntaxItemList<Vezel.Celerity.Language.Syntax.Tree.AttributeSyntax!>
-abstract Vezel.Celerity.Language.Syntax.Tree.StatementSyntax.SemicolonToken.get -> Vezel.Celerity.Language.Syntax.Tree.SyntaxToken!
+abstract Vezel.Celerity.Language.Syntax.Tree.StatementSyntax.SemicolonToken.get -> Vezel.Celerity.Language.Syntax.Tree.SyntaxToken?
 abstract Vezel.Celerity.Language.Syntax.Tree.SyntaxItem.Children() -> System.Collections.Generic.IEnumerable<Vezel.Celerity.Language.Syntax.Tree.SyntaxItem!>!
 abstract Vezel.Celerity.Language.Syntax.Tree.SyntaxItem.Descendants() -> System.Collections.Generic.IEnumerable<Vezel.Celerity.Language.Syntax.Tree.SyntaxItem!>!
 abstract Vezel.Celerity.Language.Syntax.Tree.SyntaxItem.FullSpan.get -> Vezel.Celerity.Language.Text.SourceTextSpan
@@ -513,7 +513,7 @@ override Vezel.Celerity.Language.Syntax.Tree.ExpressionStatementSyntax.Children(
 override Vezel.Celerity.Language.Syntax.Tree.ExpressionStatementSyntax.ChildTokens() -> System.Collections.Generic.IEnumerable<Vezel.Celerity.Language.Syntax.Tree.SyntaxToken!>!
 override Vezel.Celerity.Language.Syntax.Tree.ExpressionStatementSyntax.HasNodes.get -> bool
 override Vezel.Celerity.Language.Syntax.Tree.ExpressionStatementSyntax.HasTokens.get -> bool
-override Vezel.Celerity.Language.Syntax.Tree.ExpressionStatementSyntax.SemicolonToken.get -> Vezel.Celerity.Language.Syntax.Tree.SyntaxToken!
+override Vezel.Celerity.Language.Syntax.Tree.ExpressionStatementSyntax.SemicolonToken.get -> Vezel.Celerity.Language.Syntax.Tree.SyntaxToken?
 override Vezel.Celerity.Language.Syntax.Tree.FieldExpressionSyntax.ChildNodes() -> System.Collections.Generic.IEnumerable<Vezel.Celerity.Language.Syntax.Tree.SyntaxNode!>!
 override Vezel.Celerity.Language.Syntax.Tree.FieldExpressionSyntax.Children() -> System.Collections.Generic.IEnumerable<Vezel.Celerity.Language.Syntax.Tree.SyntaxItem!>!
 override Vezel.Celerity.Language.Syntax.Tree.FieldExpressionSyntax.ChildTokens() -> System.Collections.Generic.IEnumerable<Vezel.Celerity.Language.Syntax.Tree.SyntaxToken!>!
